--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -12,12 +12,11 @@
     <div class="slider-container">
 
         <div class="my-slider">
-            <div><img src="jpg/mem-1.jpg" alt="img mem" class="img-class"></div>
-            <div><img src="jpg/mem-2.jpg" alt="img mem" class="img-class"></div>
-            <div><img src="jpg/mem-3.jpg" alt="img mem" class="img-class"></div>
-            
-            <div><img src="jpg/mem-5.jpg" alt="img mem" class="img-class"></div>
-            <div><img src="jpg/mem-6.jpg" alt="img mem" class="img-class"></div>
+            <div><img src="jpg/mem-1.jpg" alt="img mem" class="img-class"><p class="text">Привет, это мой слайдер с мемасами.</p></div>
+            <div><img src="jpg/mem-2.jpg" alt="img mem" class="img-class"><p class="text">Дальше лишь отборные IT-приколюхи...</p></div>
+            <div><img src="jpg/mem-3.jpg" alt="img mem" class="img-class"><p class="text">Эволюция прогера...</p></div>
+            <div><img src="jpg/mem-5.jpg" alt="img mem" class="img-class"><p class="text">еще немного програмистических шуток...</p></div>
+            <div><img src="jpg/mem-6.jpg" alt="img mem" class="img-class"><p class="text">Спасибо ;)</p></div>
         </div>          
     </div>
 
